syntax = "proto3";

package pb;

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/refresh_token";

message DeleteRefreshTokenByValueRequest {
    string refresh_token = 1;
}